| Summary: | ASTERISK-27232: When in queue on g722 with interruptions, music on hold can get stuck and no longer play | ||||
| Reporter: | Jens T. (sesom42) | Labels: | |||
| Date Opened: | 2017-08-30 12:43:07 | Date Closed: | 2017-09-06 09:05:11 | ||
| Priority: | Minor | Regression? | |||
| Status: | Closed/Complete | Components: | Applications/app_queue Codecs/codec_g722 Resources/res_musiconhold | ||
| Versions: | 13.17.0 | Frequency of Occurrence | Constant | ||
| Related Issues: |
| ||||
| Environment: | FreePBX Distribution 14.0.1.4 | Attachments: | ( 0) moh.g722 | ||
| Description: | After a certain time, MOH is no longer played in a queue with announcements and calls with codec G722. The announcements will continue to play, but MOH will not be resumed.
A complete example, including the announcements: {noformat} [2017-08-30 19:24:14] VERBOSE[12913][C-0000005f] res_musiconhold.c: Started music on hold, class 'default', on channel 'PJSIP/1000-00000088' [2017-08-30 19:24:14] VERBOSE[12913][C-0000005f] res_musiconhold.c: Stopped music on hold on PJSIP/1000-00000088 [2017-08-30 19:24:14] VERBOSE[12913][C-0000005f] file.c: <PJSIP/1000-00000088> Playing 'queue-youarenext.slin16' (language 'de') [2017-08-30 19:24:20] VERBOSE[12913][C-0000005f] app_queue.c: Told PJSIP/1000-00000088 in 3000 their queue position (which was 1) [2017-08-30 19:24:20] VERBOSE[12913][C-0000005f] file.c: <PJSIP/1000-00000088> Playing 'queue-thankyou.slin16' (language 'de') [2017-08-30 19:24:22] VERBOSE[12913][C-0000005f] res_musiconhold.c: Started music on hold, class 'default', on channel 'PJSIP/1000-00000088' [2017-08-30 19:24:59] VERBOSE[12913][C-0000005f] res_musiconhold.c: Stopped music on hold on PJSIP/1000-00000088 [2017-08-30 19:24:59] VERBOSE[12913][C-0000005f] file.c: <PJSIP/1000-00000088> Playing 'queue-youarenext.slin16' (language 'de') [2017-08-30 19:25:05] VERBOSE[12913][C-0000005f] app_queue.c: Told PJSIP/1000-00000088 in 3000 their queue position (which was 1) [2017-08-30 19:25:05] VERBOSE[12913][C-0000005f] file.c: <PJSIP/1000-00000088> Playing 'queue-thankyou.slin16' (language 'de') [2017-08-30 19:25:07] VERBOSE[12913][C-0000005f] res_musiconhold.c: Started music on hold, class 'default', on channel 'PJSIP/1000-00000088' [2017-08-30 19:25:44] VERBOSE[12913][C-0000005f] res_musiconhold.c: Stopped music on hold on PJSIP/1000-00000088 [2017-08-30 19:25:44] VERBOSE[12913][C-0000005f] file.c: <PJSIP/1000-00000088> Playing 'queue-youarenext.slin16' (language 'de') [2017-08-30 19:25:50] VERBOSE[12913][C-0000005f] app_queue.c: Told PJSIP/1000-00000088 in 3000 their queue position (which was 1) [2017-08-30 19:25:50] VERBOSE[12913][C-0000005f] file.c: <PJSIP/1000-00000088> Playing 'queue-thankyou.slin16' (language 'de') [2017-08-30 19:25:52] VERBOSE[12913][C-0000005f] res_musiconhold.c: Started music on hold, class 'default', on channel 'PJSIP/1000-00000088' [2017-08-30 19:26:29] VERBOSE[12913][C-0000005f] res_musiconhold.c: Stopped music on hold on PJSIP/1000-00000088 [2017-08-30 19:26:29] VERBOSE[12913][C-0000005f] file.c: <PJSIP/1000-00000088> Playing 'queue-youarenext.slin16' (language 'de') [2017-08-30 19:26:35] VERBOSE[12913][C-0000005f] app_queue.c: Told PJSIP/1000-00000088 in 3000 their queue position (which was 1) [2017-08-30 19:26:35] VERBOSE[12913][C-0000005f] file.c: <PJSIP/1000-00000088> Playing 'queue-thankyou.slin16' (language 'de') [2017-08-30 19:26:37] VERBOSE[12913][C-0000005f] res_musiconhold.c: Started music on hold, class 'default', on channel 'PJSIP/1000-00000088' [2017-08-30 19:27:14] VERBOSE[12913][C-0000005f] res_musiconhold.c: Stopped music on hold on PJSIP/1000-00000088 [2017-08-30 19:27:14] VERBOSE[12913][C-0000005f] file.c: <PJSIP/1000-00000088> Playing 'queue-youarenext.slin16' (language 'de') [2017-08-30 19:27:20] VERBOSE[12913][C-0000005f] app_queue.c: Told PJSIP/1000-00000088 in 3000 their queue position (which was 1) [2017-08-30 19:27:20] VERBOSE[12913][C-0000005f] file.c: <PJSIP/1000-00000088> Playing 'queue-thankyou.slin16' (language 'de') [2017-08-30 19:27:22] VERBOSE[12913][C-0000005f] res_musiconhold.c: Started music on hold, class 'default', on channel 'PJSIP/1000-00000088' [2017-08-30 19:27:22] WARNING[12913][C-0000005f] format_pcm.c: offset too large 895680, truncating to 640523 [2017-08-30 19:27:22] VERBOSE[12913][C-0000005f] res_musiconhold.c: Stopped music on hold on PJSIP/1000-00000088 [2017-08-30 19:27:59] VERBOSE[12913][C-0000005f] file.c: <PJSIP/1000-00000088> Playing 'queue-youarenext.slin16' (language 'de') [2017-08-30 19:28:05] VERBOSE[12913][C-0000005f] app_queue.c: Told PJSIP/1000-00000088 in 3000 their queue position (which was 1) [2017-08-30 19:28:05] VERBOSE[12913][C-0000005f] file.c: <PJSIP/1000-00000088> Playing 'queue-thankyou.slin16' (language 'de') [2017-08-30 19:28:07] VERBOSE[12913][C-0000005f] res_musiconhold.c: Started music on hold, class 'default', on channel 'PJSIP/1000-00000088' [2017-08-30 19:28:07] WARNING[12913][C-0000005f] format_pcm.c: offset too large 895680, truncating to 640523 [2017-08-30 19:28:07] VERBOSE[12913][C-0000005f] res_musiconhold.c: Stopped music on hold on PJSIP/1000-00000088 {noformat} The file moh.g722 is exactly 640,523 bytes in size. The problem does not occur with the PCMA and PCMU codecs. | ||||
| Comments: | By: Asterisk Team (asteriskteam) 2017-08-30 12:43:08.014-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Rusty Newton (rnewton) 2017-09-01 15:29:14.968-0500 Please provide an additional debug file captured during a reproduction of the issue: https://wiki.asterisk.org/wiki/display/AST/Collecting+Debug+Information Be sure the file includes warning, error, notice, verbose and debug log levels. Make sure that VERBOSE and DEBUG log levels are both turned up to verbosity 5 or higher. Does the issue occur only when the MOH file is in g722 and the channels are g722 as well? or also when the channels and file differ (transcoding) ? By: Sean Bright (seanbright) 2017-09-01 15:45:32.930-0500 Also, if you could include your moh.g722 file that would be helpful. By: Jens T. (sesom42) 2017-09-02 04:23:07.492-0500 G722 file to reproduce the issue. By: Friendly Automation (friendly-automation) 2017-09-06 09:05:12.723-0500 Change 6403 merged by Jenkins2: formats: Restore previous fread() behavior [https://gerrit.asterisk.org/6403|https://gerrit.asterisk.org/6403] By: Friendly Automation (friendly-automation) 2017-09-06 09:12:49.153-0500 Change 6407 merged by Joshua Colp: formats: Restore previous fread() behavior [https://gerrit.asterisk.org/6407|https://gerrit.asterisk.org/6407] By: Friendly Automation (friendly-automation) 2017-09-06 09:12:56.381-0500 Change 6405 merged by Jenkins2: formats: Restore previous fread() behavior [https://gerrit.asterisk.org/6405|https://gerrit.asterisk.org/6405] By: Friendly Automation (friendly-automation) 2017-09-06 09:13:01.897-0500 Change 6404 merged by Joshua Colp: formats: Restore previous fread() behavior [https://gerrit.asterisk.org/6404|https://gerrit.asterisk.org/6404] By: Friendly Automation (friendly-automation) 2017-09-06 09:27:47.588-0500 Change 6406 merged by Joshua Colp: formats: Restore previous fread() behavior [https://gerrit.asterisk.org/6406|https://gerrit.asterisk.org/6406] | ||||